# manualy-backward

./: README.md
manual_backward/: CMakeLists.txt  activation.cpp  activation.h  cross_entropy_loss.cpp  cross_entropy_loss.h  layer.cpp  layer.h  main.cpp  main.h  neuron.cpp  neuron.h  relu.cpp  relu.h  softmax.cpp  softmax.h
other_sapmles/: XOR.c  manualy_nn_training.ipynb  single_neuron.c
